:art: 1. 添加接口返回结果注释   2. 完善readme

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^0.18.0",
     "cmdu": "^2.0.12",
     "handlebars": "^4.0.11",
-    "mkdirp": "^0.5.1"
+    "mkdirp": "^0.5.1",
+    "qs-url": "^1.0.3"
   }
 }
